--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,472 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200;500;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200;500;700&display=swap");
+body {
+  margin: 0;
+  font-family: Poppins;
+  background-color: rgb(78, 35, 73);
+  color: #eee;
+  min-height: 100vh;
+  background-image: linear-gradient(to right, transparent 0px 49px, #eee3 49px),
+    linear-gradient(to bottom, transparent 0px 49px, #eee3 49px);
+  background-size: 50px 50px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  &::before {
+    width: 100%;
+    max-width: 400px;
+    height: 400px;
+    background-image: linear-gradient(to right, #97534e, #7a43b6);
+    position: fixed;
+    top: -200px;
+    right: calc(50% - 200px);
+    content: "";
+    filter: blur(100px);
+    z-index: -1;
+  }
+
+  & a {
+    text-decoration: none;
+    color: #eee;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  position: fixed;
+  width: 1300px;
+  max-width: 100%;
+  height: 60px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  box-sizing: border-box;
+  z-index: 100;
+  backdrop-filter: blur(10px);
+  & img {
+    width: 50px;
+  }
+  & .logo,
+  nav {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    & span {
+      cursor: pointer;
+    }
+    & .active {
+      color: #e945e3;
+      text-shadow: 0 0 5px #7a43b6;
+    }
+  }
+  & .icon-bar {
+    width: 30px;
+    display: none;
+  }
+}
+main {
+  width: 1300px;
+  max-width: 100%;
+  margin: auto;
+}
+
+section {
+  padding: 50px;
+  box-sizing: border-box;
+  top: 0;
+}
+
+section.home {
+  padding-top: 150px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
+  & .content {
+    display: flex;
+    flex-direction: column;
+    font-family: "MuseoModerno", system-ui;
+    & .name {
+      font-size: 7rem;
+      font-weight: bold;
+      line-height: 1em;
+      text-transform: uppercase;
+
+      & span {
+        background-image: linear-gradient(
+          to right,
+          rgb(226, 114, 114),
+          rgb(62, 233, 62),
+          rgb(96, 96, 202),
+          hsl(332, 75%, 66%)
+        );
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        background-size: 200% auto;
+        animation: shine 5s linear infinite;
+      }
+    }
+
+    & .des {
+      color: #eee9;
+      padding-left: 50px;
+      border-left: solid 10px blueviolet;
+      text-align: left;
+      margin: 30px 0;
+    }
+    & a {
+      width: fit-content;
+      padding: 20px;
+      border-radius: 50px;
+      border: solid 1px white;
+    }
+  }
+
+  & .avatar {
+    text-align: center;
+    & .card {
+      display: inline-flex;
+      flex-direction: column;
+      width: min(100%, 400px);
+      box-shadow: 0 150px 150px #e945e333;
+      transition: 0.5s;
+      &:hover {
+        box-shadow: 0 150px 150px #e945e355;
+      }
+      & img {
+        width: 100%;
+        height: min(50vh, 700px);
+        object-fit: cover;
+        object-position: center;
+        clip-path: polygon(80% 0, 100% 20%, 100% 100%, 0 100%, 0 0);
+      }
+
+      & .info {
+        display: grid;
+        background-color: #eee;
+        color: black;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 20px;
+      }
+    }
+  }
+}
+
+section.skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & .title {
+    font-size: 5vw;
+    font-family: "MuseoModerno", system-ui;
+  }
+
+  & .des {
+    color: #eee9;
+    text-align: center;
+    max-width: 500px;
+  }
+
+  & .list-skills {
+    margin-top: 50px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    justify-content: space-between;
+    gap: 3vw;
+    position: relative;
+
+    &::before {
+      content: "";
+      width: 70%;
+      height: 70%;
+      background-image: linear-gradient(
+        to right,
+        rgb(102, 73, 131),
+        rgb(189, 59, 59)
+      );
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      /* background-size: 200%; */
+      border-radius: 50px;
+    }
+
+    & .item {
+      backdrop-filter: blur(50px);
+      padding: 20px;
+      border-radius: 40px;
+
+      & .des {
+        text-align: left;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+section.projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  & .title {
+    font-size: 5vw;
+    font-family: "MuseoModerno", system-ui;
+  }
+
+  & .des {
+    color: #eee5;
+    text-align: center;
+    max-width: 500px;
+  }
+
+  & .des-link {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  & .list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    gap: 80px;
+    & .item {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      & .images {
+        background-image: linear-gradient(
+          to right,
+          rgb(206, 36, 107),
+          rgb(121, 13, 13)
+        );
+        padding: 40px;
+        text-align: center;
+        border-radius: 20px;
+        overflow: hidden;
+        align-items: center;
+        display: flex;
+        & img {
+          height: 400px;
+          border-radius: 20px;
+          box-shadow: 0 20px 40px #010824;
+          margin-top: auto;
+          margin-bottom: auto;
+        }
+      }
+      & .content {
+        & h3 {
+          text-align: left;
+          font-size: 3em;
+          margin: 0;
+        }
+        & .des {
+          text-align: left;
+          width: 100%;
+        }
+        & .mission {
+          display: grid;
+          grid-template-columns: 70px 1fr;
+          align-items: center;
+          gap: 10px;
+          margin-top: 10px;
+
+          & h4 {
+            text-align: left;
+            margin: 0 0;
+          }
+
+          & div:nth-child(1) svg {
+            background-color: #eee3;
+            padding: 20px;
+            font-size: 20px;
+            border-radius: 15px;
+          }
+        }
+      }
+    }
+    & .item:nth-child(2n) {
+      & .images {
+        grid-column-start: 2;
+        grid-column-end: 3;
+      }
+      & .content {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+      }
+    }
+  }
+}
+
+section.experience {
+  padding: 50px;
+  color: #eee;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  & .title {
+    font-size: 5vw;
+    font-family: "MuseoModerno", system-ui;
   }
-  to {
-    transform: rotate(360deg);
+
+  & .experience-item {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    backdrop-filter: blur(5px);
+
+    h2 {
+      color: #e945e3;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin: 5px 0;
+    }
+
+    ul {
+      margin-left: 20px;
+
+      li {
+        list-style-type: square;
+      }
+    }
+  }
+}
+
+section.contacts {
+  padding-bottom: 220px;
+  & .title {
+    text-align: center;
+    font-size: 5vw;
+    font-family: "MuseoModerno", system-ui;
+  }
+  & .des {
+    color: #eee5;
+    text-align: center;
+    max-width: 500px;
+    margin: auto;
+  }
+  & .list {
+    text-align: center;
+    & .item {
+      margin-top: 50px;
+    }
+  }
+}
+
+.animation {
+  transform: translateY(50px);
+  filter: blur(20px);
+  opacity: 0;
+  transition: 0.5s;
+}
+.animation.active {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
+}
+
+@keyframes shine {
+  0% {
+    background-position: 0% center;
+  }
+  100% {
+    background-position: 200% center;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  section.home {
+    & .content {
+      & .name {
+        font-size: 4em;
+      }
+    }
+    & .avatar {
+      & img {
+        max-height: 500px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  section {
+    padding: 20px;
+    &.home {
+      grid-template-columns: 1fr;
+      padding-top: 70px;
+      & .content {
+        & a {
+          margin: auto;
+          font-size: small;
+        }
+      }
+      & .avatar {
+        grid-row-start: 1;
+      }
+    }
+    &.projects {
+      & .list {
+        & .item {
+          grid-template-columns: 1fr;
+          & .images {
+            padding: 10px 10px;
+            margin-left: auto;
+            margin-right: auto;
+            & img {
+              width: 100%;
+              overflow: hidden;
+            }
+          }
+          & .content {
+            & h3 {
+              font-size: 1.2em;
+              margin-bottom: 1em;
+            }
+          }
+        }
+        & .item:nth-child(2n) {
+          & .content,
+          .images {
+            grid-row-start: auto;
+            grid-column-start: auto;
+            grid-column-end: auto;
+          }
+        }
+      }
+    }
+  }
+  header {
+    & nav {
+      width: 80%;
+      height: 100vh;
+      position: fixed;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+      inset: 0 auto 0 0;
+      background-color: #eee;
+      color: #0f1225;
+      padding: 50px;
+      box-sizing: border-box;
+      font-weight: bold;
+      left: -100%;
+      transition: 0.5s;
+    }
+    & .icon-bar {
+      display: block;
+    }
+    & nav.active {
+      left: 0;
+    }
   }
 }
