--- a/src/App.css
+++ b/src/App.css
@@ -223,6 +223,7 @@ section.projects {
     color: #eee5;
     text-align: center;
     max-width: 500px;
+    width: 100%;
   }
 
   & .des-link {
@@ -353,6 +354,7 @@ section.contacts {
     text-align: center;
     max-width: 500px;
     margin: auto;
+    font-size: 15px;
   }
   & .list {
     text-align: center;
@@ -420,16 +422,18 @@ section.contacts {
           grid-template-columns: 1fr;
           & .images {
             padding: 10px 10px;
-            margin-left: auto;
-            margin-right: auto;
+            /* margin-left: auto;
+            margin-right: auto; */
+            overflow: hidden;
+            display: flex;
             & img {
-              width: 100%;
-              overflow: hidden;
+              /* width: 100%; */
+              
             }
           }
           & .content {
             & h3 {
-              font-size: 1.2em;
+              font-size: 1.2rem;
               margin-bottom: 1em;
             }
           }
